--- a/scss/_landing.scss
+++ b/scss/_landing.scss
@@ -1,5 +1,3 @@
-
-//landing for homepage
 .landing {
   width: 100%;
   z-index: 99999;
@@ -80,7 +78,10 @@
     }
 
     @include v.phone-width {
-      display: none;
+      width: 100px;
+      height: 100px;
+      bottom: 8vh;
+      left: 9vw;
     }
 
     .text-round {
@@ -109,8 +110,8 @@
       }
 
       @include v.phone-width {
-        width: calc(34px - 8px);
-        height: calc(53px - 8px);
+        width: calc(34px - 10px);
+        height: calc(53px - 10px);
       }
 
       .scroller {
@@ -128,7 +129,8 @@
         }
 
         @include v.phone-width {
-          left: 11px;
+          left: 10px;
+          top: 8px;
         }
       }
     }
