--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,8 +1,8 @@
 @use "variables"as v;
 @import "_normalize";
-@import "_nav"; 
+@import "_nav";
 @import "_jqdatepicker";
-
+@import "_table";
 
 * {
   box-sizing: border-box;
@@ -264,6 +264,7 @@ input:-internal-autofill-selected {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
 // 電影分級表背景色
 .y12 {
   background-color: v.$yellow-bg-color;
@@ -288,10 +289,15 @@ input:-internal-autofill-selected {
 /* share style */
 .section-box {
   padding: 0 15px;
+
+  @include v.phone-width {
+    padding: 0 10px;
+  }
 }
 
 .main-title {
   width: 100%;
+  text-align: left;
   margin-bottom: 30px;
 
   div {
@@ -615,9 +621,11 @@ input:-internal-autofill-selected {
 .actionbtn {
   text-align: center;
   margin-top: 80px;
+
   @include v.phone-width {
     margin-top: 20px;
   }
+
   button,
   div {
     width: 100%;
@@ -648,10 +656,12 @@ footer {
 
     @include v.pad-width {
       flex-direction: column;
+      padding: 40px 15px;
     }
 
     @include v.phone-width {
       flex-direction: column;
+      padding: 40px 15px;
     }
 
     div {
@@ -714,9 +724,11 @@ footer {
   border-radius: 10px;
   color: black;
   background: #EBEBEB;
+
   @include v.pad-width {
     width: 85%;
   }
+
   @include v.phone-width {
     width: 90%;
     top: 20px;
@@ -742,9 +754,10 @@ footer {
     color: v.$secondary;
     padding: 0 10px;
     height: 45px;
-     @include v.phone-width {
-        height: 35px;
-      }
+
+    @include v.phone-width {
+      height: 35px;
+    }
 
     &#confirmrule,
     &#lockpwd {
@@ -801,14 +814,14 @@ footer {
 }
 
 #login {
-  .modal-content{
+  .modal-content {
     @include v.under-pad-width {
       overflow-y: auto
     }
-    @include v.under-pad-width {
-      
-    }
+
+    @include v.under-pad-width {}
   }
+
   .nobr {
     display: inline-block;
     @extend %weight400;
@@ -861,14 +874,16 @@ footer {
 }
 
 #regist {
-  .modal-content{
+  .modal-content {
     @include v.under-pad-width {
       overflow-y: auto;
     }
-    @include v.mini-height{
+
+    @include v.mini-height {
       height: 80%;
     }
   }
+
   label[for="confirmrule"] {
     @extend %weight300;
   }
@@ -901,33 +916,6 @@ footer {
     visibility: visible;
     opacity: 1;
   }
-}
-
-// div table
-.table {
-  display: table;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.table-tr {
-  display: table-row;
-  width: 100%;
-}
-
-.table-th {
-  display: table-cell;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
-  background-color: #818181;
-}
-
-.table-td {
-  display: table-cell;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
 }
 
 // 步驟條
@@ -999,11 +987,12 @@ footer {
         @extend %weight600;
 
         &::before {
-          border-color:v.$yellow-bg-color;
+          border-color: v.$yellow-bg-color;
           background-color: v.$yellow-bg-color;
           color: #000;
         }
-        &:after{
+
+        &:after {
           background-color: v.$yellow-bg-color;
         }
       }
@@ -1014,11 +1003,12 @@ footer {
 
         &::before {
           content: '✓';
-          border-color:v.$yellow-bg-color;
+          border-color: v.$yellow-bg-color;
           background-color: v.$yellow-bg-color;
           color: #000;
         }
-         &:after{
+
+        &:after {
           background-color: v.$yellow-bg-color;
         }
       }
@@ -1066,4 +1056,19 @@ footer {
     width: 100%;
     height: 100%;
   }
+}
+//google map RWD
+.iframe-rwd {
+position: relative;
+padding-bottom: 50%;
+padding-top: 30px;
+height: 0;
+overflow: hidden;
+}
+.iframe-rwd iframe {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 400px;
 }
