--- a/scss/page.scss
+++ b/scss/page.scss
@@ -179,7 +179,10 @@
         display: -webkit-inline-box;
 
         div {
-          max-width: 95%;
+          max-width: 93%;
+          @include v.mini-width(){
+            max-width: 90%;
+          }
         }
       }
     }
@@ -257,6 +260,7 @@
         justify-content: center;
       }
       >.content-row{
+        justify-content: center;
         padding-bottom: 20px;
       }
       .content-row{
@@ -336,6 +340,9 @@
       .list {
         display: flex;
         margin-bottom: 5px;
+         @include v.phone-width {
+       justify-content: space-between;
+       }
 
         &:last-of-type {
           margin-bottom: 0;
@@ -356,10 +363,11 @@
       top: 40px;
 
       @include v.phone-width {
-        position: unset;
-        margin-top: 40px;
+        position: static;
+        margin-top: 20px;
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
       }
 
       .state {
@@ -411,6 +419,9 @@
         display: flex;
         align-items: center; 
         justify-content: center;
+         @include v.phone-width {
+          flex-basis: 100%;
+        }
         span{
           width: 120px;
           text-align: center;
@@ -758,6 +769,45 @@
         margin-bottom: 40px;
       }
     }
+    .row-right{
+      .actions{
+        justify-content: center;
+        button{
+          border-radius: 5px;
+          color: #fff;
+          &:first-of-type{margin-right: 20px;}
+          .material-icons{margin-left: 15px;}
+          a{
+            padding: 8px 15px;
+            display: flex;
+            align-items: center;
+          }
+          span:first-of-type{
+            text-align: left;@extend %weight600;
+            display: inline-block; 
+          }
+          small{
+            display: block;
+            margin-bottom: 2px;
+            font-size: 9px;
+            font-weight: 500;
+          }
+          &.quick-view{
+            border: 1px solid #036EB7;
+            &:hover{
+            background-color: #036EB7;
+            }
+          }
+          &.buy-ticket{
+            border: 1px solid v.$blue-bg-color;
+            &:hover{
+            background-color: v.$blue-bg-color;
+            }
+          }
+          
+        }
+      }
+    }
 
     .movie-item {
 
@@ -859,17 +909,17 @@
           width: 33.33%;
         }
 
-        a {
+        span {
           display: block;
           padding: 5px 10px;
           border: 1px solid #fff;
           border-radius: 5px;
           margin: 5px;
-
+          cursor: pointer;
         }
 
         &.active {
-          a {
+          span {
             color: v.$secondary;
             border: 1px solid v.$yellow-bg-color;
             background-color: v.$yellow-bg-color;
@@ -878,9 +928,8 @@
         }
 
         &.disable {
-          a {
+        span {
             cursor: not-allowed;
-            pointer-events: none;
             color: v.$font-secondary;
             border: 1px solid v.$font-secondary;
           }
@@ -1124,6 +1173,21 @@
     .package {
       margin-bottom: 30px;
       overflow-x: auto;
+       &:nth-of-type(odd){
+        .package-title{
+          .table-th {
+            @include v.bg-opacity(v.$blue-bg-color, 0.8);
+           }
+        }
+        
+      }
+      &:nth-of-type(even){
+        .package-title{
+          .table-th {
+            background-color: #036EB7;
+           }
+        }
+      }
     }
 
 
@@ -1149,18 +1213,10 @@
       }
 
       .table-th {
-        background-color: #036EB7;
         padding: 5px 5px 5px 10px;
         text-align: left;
         width: 100%;
       }
-
-      .sale {
-
-        @include v.bg-opacity(v.$blue-bg-color, 0.8);
-        
-      }
-
       .material-icons {
         margin-right: 10px;
       }
@@ -1170,7 +1226,7 @@
       margin-top: 5px;
       background-color: #ccc;
       padding: 15px 20px;
-      min-width: 800px;
+      min-width: 600px;
 
       @include v.phone-width {
         padding: 10px;
@@ -1220,26 +1276,33 @@
         white-space: nowrap;
 
         span {
-          display: inline-block;
+          display: inline-flex;
+          align-items: center;
+          justify-content: center;
           text-align: center;
-          font-size: 25px;
-          width: 30px;
+          font-size: 18px;
+          width: 32px;
+          height: 32px;
+          border: 1px solid #3e3e3e;
+          border-radius: 50%;
           cursor: pointer;
           @extend %weight600;
 
           &.minus {
-            color: #818181;
+            color: #706d6d;
           }
-        }
-
-        input {
+          &.number {
           color: #000;
-          width: 60px;
-          height: 30px;
+          width: 50px;
+          font-size: 1rem;
           padding: 0;
           text-align: center;
-          border-color: #81818153;
+          border-color: transparent;
+          background-color: transparent;
         }
+        }
+
+        
       }
     }
 
@@ -1294,171 +1357,6 @@
 
     .main-title div:nth-of-type(1)::before {
       background-color: v.$blue-bg-color;
-    }
-
-    .seat-table {
-      // width: fit-content;
-      min-width: 60%;
-      max-width: 80%;
-      margin: 0 auto 80px auto;
-      overflow-x: auto;
-      padding-bottom: 20px;
-
-      @include v.phone-width {
-        width: 100%;
-        max-width: 100%;
-      }
-
-      .seat-mark {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 40px;
-        flex-wrap: wrap;
-
-        @include v.phone-width {
-          margin-top: 10px;
-        }
-
-        .mark {
-          margin: 0 15px;
-          @extend %weight600;
-
-          @include v.phone-width {
-            margin: 0;
-            margin-bottom: 5px;
-            width: 50%;
-          }
-
-          span {
-            border: 1px solid #fff;
-            padding: 5px 10px;
-            border-radius: 5px;
-            margin-right: 10px;
-            display: inline-block;
-
-            @include v.phone-width {
-              padding: 2px 5px;
-            }
-          }
-        }
-
-        .selected {
-          span {
-            background-color: v.$green-bg-color;
-          }
-        }
-
-        .sell {
-          span {
-            background-color: v.$red-bg-color;
-          }
-        }
-
-        .wheelchair {
-          span {
-            border-color: #E75514;
-            color: #E75514;
-            font-size: 23px;
-          }
-        }
-
-      }
-
-      .screen {
-        display: block;
-        color: #000;
-        text-align: center;
-        vertical-align: middle;
-        padding-top: 5px;
-        margin: 20px auto 40px auto;
-        width: 800px;
-
-        img {
-          width: 600px;
-
-          @include v.phone-width {
-            width: 400px
-          }
-        }
-
-        @include v.phone-width {
-          width: 663px
-        }
-      }
-
-      .table-tr {
-        height: 40px;
-
-        @include v.phone-width {
-          height: 30px;
-        }
-      }
-
-      .table-td {
-        .td-block {
-          width: 45px;
-          padding: 2px 0;
-          margin: 0 3px;
-
-          @include v.pad-width {
-            width: 40px;
-            font-size: 0.9rem;
-          }
-
-          @include v.phone-width {
-            width: 35px;
-            margin: 0 2px;
-            font-size: 0.8rem;
-          }
-        }
-
-        .seat {
-          cursor: pointer;
-          // background-color: #000;
-          border-radius: 5px;
-          @include v.step3v2( 1px, #fff, #fff );
-          .material-icons {
-            font-size: 22px;
-            vertical-align: text-top;
-
-            @include v.phone-width {
-              font-size: 18px;
-            }
-          }
-        }
-
-        .accessibility {
-          border-color: #E75514;
-          color: #E75514;
-        }
-
-        &.soldout {
-          .seat {
-            border-color: #818181;
-            cursor: not-allowed;
-            background-color: v.$red-bg-color;
-          }
-        }
-
-        &.booked {
-          .seat {
-            border-color: #818181;
-            background-color: v.$green-bg-color;
-          }
-        }
-
-        &.disable {
-          .seat {
-            cursor: not-allowed;
-            pointer-events: none;
-            background-color: #81818153;
-            color: #818181;
-            border-color: #818181;
-          }
-        }
-
-      }
     }
 
     .condition {
@@ -1573,7 +1471,29 @@
     }
 
   }
+  .preview{
+    text-align: center;
+    .main-title div:nth-of-type(2) {
+      color: v.$blue-bg-color
+    }
 
+    .main-title div:nth-of-type(1)::before {
+      background-color: v.$blue-bg-color;
+    }
+    .close{
+      border-color: #fff;
+      color: #fff;
+    }
+    
+  }
+  .contact{
+    .actions{
+      justify-content: flex-start;
+    } 
+    .info{
+      
+    }
+  }
 }
 
 // animate
