修正table無法在視窗內橫移

--- a/css/page.css
+++ b/css/page.css
@@ -6,7 +6,7 @@
   font-weight: 400;
 }
 
-.section .movie-item .list-item > div, .section .booking-history .ticket-no, .section .account label, .section .account .actionbtn, .section .account .actionbtn button span, .section .booking .row-right .actions button span:first-of-type, .section .booking .weektable .booktime, .section .tickets-package .package-content .ticket-set .type, .section .tickets-package .package-content .ticket-sheet span, .section .actions button.next, .section .actions button.back, .section .book-tickets-2 .condition > div span, .section .book-tickets-3 .check-info label, .section .book-tickets-3 .check-info .container-checkbox a, .section .book-tickets-4 .book-done {
+.seat-table .seat-mark .mark, .section .movie-item .list-item > div, .section .booking-history .ticket-no, .section .account label, .section .account .actionbtn, .section .account .actionbtn button span, .section .booking .row-right .actions button span:first-of-type, .section .booking .weektable .booktime, .section .tickets-package .package-content .ticket-set .type, .section .tickets-package .package-content .ticket-sheet span, .section .actions button.next, .section .actions button.back, .section .book-tickets-2 .condition > div span, .section .book-tickets-3 .check-info label, .section .book-tickets-3 .check-info .container-checkbox a, .section .book-tickets-4 .book-done {
   font-weight: 600;
 }
 
@@ -160,6 +160,214 @@
     left: 10px;
     top: 8px;
   }
+}
+
+.section .introduction {
+  font-weight: 300;
+}
+
+.section .tickets-package .package-content .ticket-set .table-td div, .section .movie-item .book-btn, .section .showing-list .state {
+  font-weight: 400;
+}
+
+.section .book-tickets-4 .book-done, .section .book-tickets-3 .check-info .container-checkbox a, .section .book-tickets-3 .check-info label, .section .book-tickets-2 .condition > div span, .section .actions button.back, .section .actions button.next, .section .tickets-package .package-content .ticket-sheet span, .section .tickets-package .package-content .ticket-set .type, .section .booking .weektable .booktime, .section .booking .row-right .actions button span:first-of-type, .section .account .actionbtn button span, .section .account .actionbtn, .section .account label, .section .booking-history .ticket-no, .section .movie-item .list-item > div, .seat-table .seat-mark .mark {
+  font-weight: 600;
+}
+
+.table {
+  display: table;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.table-tr {
+  display: table-row;
+  width: 100%;
+}
+
+.table-th {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+  background-color: #818181;
+}
+
+.table-td {
+  display: table-cell;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.seat-table {
+  min-width: 60%;
+  max-width: 75%;
+  margin: 0 auto 80px auto;
+  overflow-x: auto;
+  padding-bottom: 20px;
+}
+@media all and (max-width: 768px) {
+  .seat-table {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+.seat-table .seat-mark {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 40px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media all and (max-width: 768px) {
+  .seat-table .seat-mark {
+    margin-top: 10px;
+    padding-left: 10px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+.seat-table .seat-mark .mark {
+  margin: 0 15px;
+}
+@media all and (max-width: 768px) {
+  .seat-table .seat-mark .mark {
+    margin: 0;
+    margin-bottom: 10px;
+    width: 33.33%;
+    text-align: left;
+  }
+}
+@media all and (max-width: 320px) {
+  .seat-table .seat-mark .mark {
+    width: 50%;
+  }
+}
+.seat-table .seat-mark .mark span {
+  display: inline-block;
+  -webkit-box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+          box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+  padding: 5px 10px;
+  border-radius: 10px 10px 0 0;
+  margin-right: 10px;
+}
+@media all and (max-width: 768px) {
+  .seat-table .seat-mark .mark span {
+    padding: 2px 5px;
+  }
+}
+.seat-table .seat-mark .selected span {
+  background-color: #73C044;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.seat-table .seat-mark .sell span {
+  background-color: #DD362B;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+.seat-table .seat-mark .wheelchair span {
+  -webkit-box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
+          box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
+  color: #E75514;
+  font-size: 23px;
+}
+.seat-table .screen {
+  display: block;
+  color: #000;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 5px;
+  margin: 20px auto 40px auto;
+  width: 800px;
+}
+.seat-table .screen img {
+  width: 600px;
+}
+@media all and (max-width: 768px) {
+  .seat-table .screen img {
+    width: 400px;
+  }
+}
+@media all and (max-width: 768px) {
+  .seat-table .screen {
+    width: 663px;
+  }
+}
+.seat-table .table-td .td-block {
+  width: 40px;
+  padding: 2px 0;
+  margin: 0 auto;
+}
+@media all and (min-width: 769px) and (max-width: 991px) {
+  .seat-table .table-td .td-block {
+    margin: 4px;
+    width: 35px;
+    font-size: 0.9rem;
+  }
+}
+@media all and (max-width: 768px) {
+  .seat-table .table-td .td-block {
+    width: 30px;
+    margin: 3px;
+    font-size: 0.8rem;
+  }
+}
+.seat-table .table-td .seat,
+.seat-table .table-td .td-seat {
+  cursor: pointer;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  -webkit-box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+          box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+}
+.seat-table .table-td .seat .material-icons,
+.seat-table .table-td .td-seat .material-icons {
+  font-size: 22px;
+  vertical-align: text-top;
+}
+@media all and (max-width: 768px) {
+  .seat-table .table-td .seat .material-icons,
+.seat-table .table-td .td-seat .material-icons {
+    font-size: 18px;
+  }
+}
+.seat-table .table-td .td-seat {
+  cursor: default;
+}
+.seat-table .table-td .accessibility {
+  -webkit-box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
+          box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
+  color: #E75514;
+}
+.seat-table .table-td.soldout .seat,
+.seat-table .table-td.soldout .td-seat {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  cursor: not-allowed;
+  background-color: #DD362B;
+}
+.seat-table .table-td.booked .seat.td-seat {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background-color: #73C044;
+}
+.seat-table .table-td.disable .seat.td-seat {
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: rgba(129, 129, 129, 0.3254901961);
+  color: #818181;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .section .showing-list {
@@ -1320,6 +1528,7 @@
 }
 .section .tickets-package .row-left {
   padding-right: 2vw;
+  width: 100%;
 }
 @media all and (min-width: 769px) and (max-width: 991px) {
   .section .tickets-package .row-left {
@@ -1376,7 +1585,6 @@
   margin-top: 5px;
   background-color: #ccc;
   padding: 15px 20px;
-  min-width: 600px;
 }
 @media all and (max-width: 768px) {
   .section .tickets-package .package-content {
@@ -1395,19 +1603,9 @@
   color: #000;
 }
 .section .tickets-package .package-content .ticket-set .table-td:first-of-type {
-  width: 45%;
+  width: 100%;
+  min-width: 200px;
   text-align: left;
-}
-.section .tickets-package .package-content .ticket-set .table-td:nth-of-type(2) {
-  width: 10%;
-  max-width: 10%;
-}
-.section .tickets-package .package-content .ticket-set .table-td:nth-of-type(3) {
-  width: 15%;
-  max-width: 10%;
-}
-.section .tickets-package .package-content .ticket-set .table-td:nth-of-type(4) {
-  width: 20%;
 }
 .section .tickets-package .package-content .ticket-sheet {
   white-space: nowrap;
