--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,7 @@
   font-weight: 400;
 }
 
-nav .sidebar .menu > li:hover .menu-link, nav .sidebar .menu .menu-link.active, .seat-table .seat-mark .mark, .main-title div:nth-of-type(2), .sub-title, .movie-title, .movie-level, .section .actions .actions-btn.active, .section .attention .note, .actionbtn button,
+nav .sidebar .menu > li:hover .menu-link, nav .sidebar .menu .menu-link.active, .main-title div:nth-of-type(2), .sub-title, .movie-title, .movie-level, .section .actions .actions-btn.active, .section .attention .note, .actionbtn button,
 .actionbtn div, .modal-content h2, .modal-content label, .step-bar .progress li.active, .step-bar .progress li.finished {
   font-weight: 600;
 }
@@ -953,217 +953,6 @@ a.ui-button:active,
 .ui-datepicker td span,
 .ui-datepicker td a {
   text-align: center;
-}
-
-#regist label[for=confirmrule], .modal-content .modal-info .row:not(:last-of-type) .lockpwd, .modal-content .modal-info .row:not(:last-of-type) .forgetpwd, .movie-title span, .main-title div:nth-of-type(1) {
-  font-weight: 300;
-}
-
-#login .nobr {
-  font-weight: 400;
-}
-
-.step-bar .progress li.finished, .step-bar .progress li.active, .modal-content label, .modal-content h2, .actionbtn button,
-.actionbtn div, .section .attention .note, .section .actions .actions-btn.active, .movie-level, .movie-title, .sub-title, .main-title div:nth-of-type(2), nav .sidebar .menu > li:hover .menu-link, nav .sidebar .menu .menu-link.active, .seat-table .seat-mark .mark {
-  font-weight: 600;
-}
-
-.table {
-  display: table;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.table-tr {
-  display: table-row;
-  width: 100%;
-}
-
-.table-th {
-  display: table-cell;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
-  background-color: #818181;
-}
-
-.table-td {
-  display: table-cell;
-  height: 100%;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.seat-table {
-  min-width: 60%;
-  max-width: 75%;
-  margin: 0 auto 80px auto;
-  overflow-x: auto;
-  padding-bottom: 20px;
-}
-@media all and (max-width: 768px) {
-  .seat-table {
-    width: 100%;
-    max-width: 100%;
-  }
-}
-.seat-table .seat-mark {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 40px;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-@media all and (max-width: 768px) {
-  .seat-table .seat-mark {
-    margin-top: 10px;
-    padding-left: 10px;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-}
-.seat-table .seat-mark .mark {
-  margin: 0 15px;
-}
-@media all and (max-width: 768px) {
-  .seat-table .seat-mark .mark {
-    margin: 0;
-    margin-bottom: 10px;
-    width: 50%;
-  }
-}
-.seat-table .seat-mark .mark span {
-  display: inline-block;
-  -webkit-box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
-          box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
-  padding: 5px 10px;
-  border-radius: 10px 10px 0 0;
-  margin-right: 10px;
-}
-@media all and (max-width: 768px) {
-  .seat-table .seat-mark .mark span {
-    padding: 2px 5px;
-  }
-}
-.seat-table .seat-mark .selected span {
-  background-color: #73C044;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-.seat-table .seat-mark .sell span {
-  background-color: #DD362B;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-.seat-table .seat-mark .wheelchair span {
-  -webkit-box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
-          box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
-  color: #E75514;
-  font-size: 23px;
-}
-.seat-table .screen {
-  display: block;
-  color: #000;
-  text-align: center;
-  vertical-align: middle;
-  padding-top: 5px;
-  margin: 20px auto 40px auto;
-  width: 800px;
-}
-.seat-table .screen img {
-  width: 600px;
-}
-@media all and (max-width: 768px) {
-  .seat-table .screen img {
-    width: 400px;
-  }
-}
-@media all and (max-width: 768px) {
-  .seat-table .screen {
-    width: 663px;
-  }
-}
-.seat-table .table-tr {
-  height: 40px;
-}
-@media all and (max-width: 768px) {
-  .seat-table .table-tr {
-    height: 30px;
-  }
-}
-.seat-table .table-td .td-block {
-  width: 40px;
-  padding: 2px 0;
-  margin: 0 auto;
-}
-@media all and (min-width: 769px) and (max-width: 991px) {
-  .seat-table .table-td .td-block {
-    margin: 0 4px;
-    width: 35px;
-    font-size: 0.9rem;
-  }
-}
-@media all and (max-width: 768px) {
-  .seat-table .table-td .td-block {
-    width: 30px;
-    margin: 0 3px;
-    font-size: 0.8rem;
-  }
-}
-.seat-table .table-td .seat,
-.seat-table .table-td .td-seat {
-  cursor: pointer;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-  -webkit-box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
-          box-shadow: 1px 0 #fff, -1px 0 #fff, 0 -1px #fff, 0 1px #fff;
-}
-.seat-table .table-td .seat .material-icons,
-.seat-table .table-td .td-seat .material-icons {
-  font-size: 22px;
-  vertical-align: text-top;
-}
-@media all and (max-width: 768px) {
-  .seat-table .table-td .seat .material-icons,
-.seat-table .table-td .td-seat .material-icons {
-    font-size: 18px;
-  }
-}
-.seat-table .table-td .td-seat {
-  cursor: default;
-}
-.seat-table .table-td .accessibility {
-  -webkit-box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
-          box-shadow: 1px 0 #E75514, -1px 0 #E75514, 0 -1px #E75514, 0 1px #E75514;
-  color: #E75514;
-}
-.seat-table .table-td.soldout .seat,
-.seat-table .table-td.soldout .td-seat {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  cursor: not-allowed;
-  background-color: #DD362B;
-}
-.seat-table .table-td.booked .seat.td-seat {
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  background-color: #73C044;
-}
-.seat-table .table-td.disable .seat.td-seat {
-  cursor: not-allowed;
-  pointer-events: none;
-  background-color: rgba(129, 129, 129, 0.3254901961);
-  color: #818181;
-  -webkit-box-shadow: none;
-          box-shadow: none;
 }
 
 * {
