--- a/scss/page.scss
+++ b/scss/page.scss
@@ -1,5 +1,7 @@
 @use "variables"as v;
 @import "_landing";
+@import "_table";
+
 
 .section {
   .showing-list {
@@ -1159,6 +1161,7 @@
 
     .row-left {
       padding-right: 2vw;
+      width: 100%;
 
       @include v.pad-width {
         padding-right: 0;
@@ -1173,6 +1176,7 @@
     .package {
       margin-bottom: 30px;
       overflow-x: auto;
+
        &:nth-of-type(odd){
         .package-title{
           .table-th {
@@ -1226,7 +1230,6 @@
       margin-top: 5px;
       background-color: #ccc;
       padding: 15px 20px;
-      min-width: 600px;
 
       @include v.phone-width {
         padding: 10px;
@@ -1248,21 +1251,22 @@
           }
 
           &:first-of-type {
-            width: 45%;
+            width: 100%;
+            min-width: 200px;
             text-align: left;
           }
 
           &:nth-of-type(2) {
-            width: 10%;
-            max-width: 10%;
+            // width: 10%;
+            // max-width: 10%;
           }
           &:nth-of-type(3) {
-            width: 15%;
-            max-width: 10%;
+            // width: 15%;
+            // max-width: 10%;
           }
 
           &:nth-of-type(4) {
-            width: 20%;
+            // width: 20%;
           }
         } 
 
